--- a/cmd/webserver/assets/sass/_tables.scss
+++ b/cmd/webserver/assets/sass/_tables.scss
@@ -7,40 +7,6 @@ ul.pagination li.donate {
     padding: .5rem .75rem;
 }
 
-// Border radius table corners
-//table.table:not(.fixedHeader-floating) {
-//
-//    thead {
-//        tr:first-child {
-//            th:first-child, td:first-child {
-//                -webkit-border-top-left-radius: 5px;
-//                -moz-border-radius-topleft: 5px;
-//                border-top-left-radius: 5px;
-//            }
-//
-//            th:last-child, td:last-child {
-//                -webkit-border-top-right-radius: 5px;
-//                -moz-border-radius-topright: 5px;
-//                border-top-right-radius: 5px;
-//            }
-//        }
-//
-//        tr:last-child {
-//            td:first-child {
-//                -webkit-border-bottom-left-radius: 5px;
-//                -moz-border-radius-bottomleft: 5px;
-//                border-bottom-left-radius: 5px;
-//            }
-//
-//            td:last-child {
-//                -webkit-border-bottom-right-radius: 5px;
-//                -moz-border-radius-bottomright: 5px;
-//                border-bottom-right-radius: 5px;
-//            }
-//        }
-//    }
-//}
-
 // TH padding
 table.table.dataTable {
     th.sorting_desc_disabled, th.sorting_asc_disabled {
@@ -49,10 +15,25 @@ table.table.dataTable {
 }
 
 //
-table.table {
+table.table:not(.no-border) {
 
-    border: 1px solid rgba(0, 0, 0, .125);
-    border-radius: .25rem;
+    border: 1px solid rgba(0, 0, 0, .125); // Taken from cards
+    border-radius: 5px;
+    border-collapse: separate;
+    border-spacing: 0;
+
+    // Fix double borders
+    tbody:first-child {
+        tr:first-child {
+            th, td {
+                border-top: 0;
+            }
+        }
+    }
+}
+
+//
+table.table {
 
     thead {
         th {
@@ -72,6 +53,8 @@ table.table {
     }
 
     td {
+        box-sizing: content-box;
+
         img {
             max-width: 100%;
         }
