--- a/cmd/webserver/templates/new_releases.gohtml
+++ b/cmd/webserver/templates/new_releases.gohtml
@@ -4,7 +4,27 @@
     <div class="container" id="new-releases-page">
 
         <div class="jumbotron">
-            <h1><i class="fas fa-hourglass-end"></i> New Releases</h1>
+            <div class="row">
+                <div class="col-sm-12 col-lg-6">
+
+                    <h1><i class="fas fa-hourglass-end"></i> New Releases</h1>
+
+                </div>
+                <div class="col-sm-12 col-lg-6">
+
+                    <div class="input-group input-group-lg mt-1 mb-0">
+                        <label for="search" class="sr-only sr-only-focusable">Search for a Game</label>
+                        <input class="form-control" type="search" placeholder="Search for a Game" id="search" name="search" autofocus>
+                        <div class="input-group-append">
+                            <input type="submit" value="Search" class="input-group-text">
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-12">
+                    <p class="lead">{{ .Description }}</p>
+                </div>
+            </div>
         </div>
 
         {{ template "_flashes" . }}
@@ -24,12 +44,6 @@
                         <div class="form-group">
                             <label for="days">Number of days to look back</label>
                             <input class="form-control" type="number" id="days" name="days" value="{{ .Days }}" min="1" max="30">
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="form-group">
-                            <label for="search">Search for a Game</label>
-                            <input class="form-control" type="search" placeholder="Game Name" id="search" name="search" autofocus>
                         </div>
                     </div>
                 </div>
