--- a/cmd/webserver/templates/groups.gohtml
+++ b/cmd/webserver/templates/groups.gohtml
@@ -4,10 +4,27 @@
     <div class="container" id="groups-page">
 
         <div class="jumbotron">
+            <div class="row">
+                <div class="col-sm-12 col-lg-6">
 
-            <h1><i class="fas fa-user-friends"></i> Groups</h1>
-            <p class="lead">{{ .Description }}</p>
+                    <h1><i class="fas fa-user-friends"></i> Groups</h1>
 
+                </div>
+                <div class="col-sm-12 col-lg-6">
+
+                    <div class="input-group input-group-lg mt-1 mb-2">
+                        <input class="form-control" type="search" placeholder="Search for a Group" id="search" name="search" autofocus data-col-sort="4">
+                        <label for="search" class="sr-only sr-only-focusable">Search for a Group</label>
+                        <div class="input-group-append">
+                            <input type="submit" value="Search" class="input-group-text">
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-12">
+                    <p class="lead">{{ .Description }}</p>
+                </div>
+            </div>
         </div>
 
         {{ template "_flashes" . }}
@@ -30,12 +47,6 @@
                                 <option value="1" selected>Active Groups</option>
                                 <option value="0">Removed Groups</option>
                             </select>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <div class="form-group">
-                            <label for="search">Search</label>
-                            <input class="form-control" type="search" placeholder="Search" id="search" name="search" data-col-sort="4">
                         </div>
                     </div>
                 </div>
