--- a/cmd/webserver/templates/players.gohtml
+++ b/cmd/webserver/templates/players.gohtml
@@ -13,8 +13,8 @@
                 <div class="col-sm-12 col-lg-6">
 
                     <div class="input-group input-group-lg mt-1 mb-2">
-                        <!--suppress HtmlFormInputWithoutLabel -->
                         <input class="form-control" type="search" placeholder="Search for a Player" id="search" name="search" autofocus>
+                        <label for="search" class="sr-only sr-only-focusable">Search for a Player</label>
                         <div class="input-group-append">
                             <input type="submit" value="Search" class="input-group-text">
                         </div>
