Fix app item size

--- a/cmd/webserver/assets/sass/_app.scss
+++ b/cmd/webserver/assets/sass/_app.scss
@@ -105,6 +105,10 @@
                 width: 200px;
             }
         }
+
+        img {
+            max-width: 256px;
+        }
     }
 
     #tracks {
