--- a/cmd/webserver/templates/api.gohtml
+++ b/cmd/webserver/templates/api.gohtml
@@ -6,8 +6,8 @@
         <div class="jumbotron mb-0">
 
             <h1><i class="fas fa-cloud-download-alt"></i> Game DB API</h1>
-            <p class="lead">We are looking to open all the data we store. The API is built with <a target="_blank" rel="noopener" href="/api/openapi.json">Open API</a> so you can generate api clients in your language.</p>
-            <div><small>To use the API, you need to <a href="/donate">upgrade</a> your account. If you need anything that is not in the API yet, please <a href="/contact">contact</a> me.</small></div>
+            <p class="lead">The API is built with <a target="_blank" rel="noopener" href="/api/openapi.json">Open API</a> so you can generate api clients in your language.</p>
+            <div><small>If you need anything that is not in the API yet, please <a href="/contact">contact</a> me.</small></div>
 
         </div>
 
