Split youtube chart away

--- a/cmd/webserver/assets/sass/_app.scss
+++ b/cmd/webserver/assets/sass/_app.scss
@@ -51,7 +51,7 @@
 
     #players {
 
-        #group-chart, #players-chart, #players-chart2, #wishlists-chart {
+        #group-chart, #players-chart, #players-chart2, #wishlists-chart, #youtube-chart {
             height: 300px;
         }
     }
