Create a terms page for youtube

--- a/cmd/webserver/templates/_footer.gohtml
+++ b/cmd/webserver/templates/_footer.gohtml
@@ -3,7 +3,11 @@
     <footer>
         <div class="container">
             <small class="text-muted text-center">
-                Game DB is not affiliated with Steam. All copyrights reserved to their respective owners. All times UTC. Version <a href="/commits">{{ .GetVersionHash }}</a>.
+                Game DB is not affiliated with Steam.
+                All copyrights reserved to their respective owners.
+                All times UTC.
+                <a href="/terms">Terms</a>.
+                Version <a href="/commits">{{ .GetVersionHash }}</a>.
             </small>
         </div>
     </footer>
