Fix info padding

--- a/cmd/webserver/templates/info.gohtml
+++ b/cmd/webserver/templates/info.gohtml
@@ -14,7 +14,7 @@
 
                 <div class="card mb-3">
                     <h5 class="card-header">Game DB</h5>
-                    <div class="card-body">
+                    <div class="card-body pl-0">
                         <ul class="mb-0">
                             <li>Game DB has been my hobby since 2015.</li>
                             <li>Game DB is fully open sourced on <a href="https://github.com/gamedb" target="_blank" rel="noopener">GitHub</a>.</li>
@@ -25,7 +25,7 @@
 
                 <div class="card mb-3">
                     <h5 class="card-header">Players</h5>
-                    <div class="card-body">
+                    <div class="card-body pl-0">
                         <ul class="mb-0">
                             <li>Players are updated when they are looked at, or automatically for donators.</li>
                             <li>Player ranks are calculated only from players on Game DB.</li>
@@ -36,7 +36,7 @@
 
                 <div class="card mb-3">
                     <h5 class="card-header">Games</h5>
-                    <div class="card-body">
+                    <div class="card-body pl-0">
                         <ul class="mb-0">
                             <li>Apps are updated instantly when the developer makes a change.</li>
                             <li>App review scores are calculated using <a href="https://en.wikipedia.org/wiki/Additive_smoothing" target="_blank" rel="noopener">Additive Smoothing</a>.</li>
@@ -49,7 +49,7 @@
 
                 <div class="card mb-3">
                     <h5 class="card-header">Groups</h5>
-                    <div class="card-body">
+                    <div class="card-body pl-0">
                         <ul class="mb-0">
                             <li>Groups are updated when a player in the group is updated, or when the group page is looked at. Limited to once per six hours.</li>
                         </ul>
@@ -58,7 +58,7 @@
 
                 <div class="card mb-3">
                     <h5 class="card-header">Badges</h5>
-                    <div class="card-body">
+                    <div class="card-body pl-0">
                         <ul class="mb-0">
                             <li>Player badges are updated when the player is updated.</li>
                             <li>Values on the badges page are updated daily.</li>
@@ -68,7 +68,7 @@
 
                 <div class="card mb-3">
                     <h5 class="card-header">Packages</h5>
-                    <div class="card-body">
+                    <div class="card-body pl-0">
                         <ul class="mb-0">
                             <li>Packages are updated instantly when the developer makes a change.</li>
                         </ul>
@@ -77,7 +77,7 @@
 
                 <div class="card mb-3">
                     <h5 class="card-header">Bundles</h5>
-                    <div class="card-body">
+                    <div class="card-body pl-0">
                         <ul class="mb-0">
                             <li>Bundles are updated when an app in the bundle is updated.</li>
                         </ul>
@@ -86,7 +86,7 @@
 
                 <div class="card mb-3">
                     <h5 class="card-header">Sale</h5>
-                    <div class="card-body">
+                    <div class="card-body pl-0">
                         <ul class="mb-0">
                             <li>Sales are updated when the app on sale is updated.</li>
                         </ul>
@@ -95,7 +95,7 @@
 
                 <div class="card mb-3">
                     <h5 class="card-header">Changes</h5>
-                    <div class="card-body">
+                    <div class="card-body pl-0">
                         <ul class="mb-0">
                             <li>Changes are updated instantly when the developer makes a change.</li>
                         </ul>
@@ -104,7 +104,7 @@
 
                 <div class="card mb-3">
                     <h5 class="card-header">News Articles</h5>
-                    <div class="card-body">
+                    <div class="card-body pl-0">
                         <ul class="mb-0">
                             <li>News articles are added when the app is updated.</li>
                         </ul>
@@ -113,7 +113,7 @@
 
                 <div class="card mb-0">
                     <h5 class="card-header">Stats</h5>
-                    <div class="card-body">
+                    <div class="card-body pl-0">
                         <ul class="mb-0">
                             <li>Tag, Genre, Category, Publisher & Developer pages are all updated at midnight.</li>
                         </ul>
